# etf-data-scraper

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  lambda_function.py  main.py  pyproject.toml
.github/workflows/: ecr_deployment.yml  lambda_deployment.yml
cloudformation_templates/: ecs-fargate.yaml  ecs_fargate.yaml  iam.yaml  lambda-eventbridge.yaml  lambda_eventbridge.yaml  s3_ecr.yaml  stack_parameters.json  vpc-private.yaml  vpc-public.yaml  vpc_private.yaml  vpc_public.yaml
lambda/: lambda_function.py  package_and_zip.sh  requirements.txt
scripts/: upload_env_to_s3.sh  validate_templates.sh  zip_lambda_to_s3.sh
src/: api.py  deploy_stack.py  utils.py
terraform/ecs_fargate/: backend.hcl  ecs_fargate.tf  main.tf  outputs.tf  variables.tf  variables.tfvars.example
terraform/iam/: backend.hcl  iam.tf  main.tf  outputs.tf  variables.tf  variables.tfvars.example
terraform/lambda_eventbridge/: backend.hcl  lambda_eventbridge.tf  main.tf  variables.tf  variables.tfvars.example
terraform/s3_ecr/: backend.hcl  ecr.tf  outputs.tf  s3.tf  variables.tf  variables.tfvars.example
terraform/vpc_private/: backend.hcl  main.tf  outputs.tf  variables.tf  variables.tfvars.example  vpc.tf
terraform/vpc_public/: backend.hcl  outputs.tf  variables.tf  variables.tfvars.example  vpc.tf
