[tool.poetry]
package-mode = false
description = ""
authors = ["YangWu1227 <yangwu2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.32.3"
requests-cache = ">=1.2.0"
pyrate-limiter = ">=2.10.0"
yfinance = ">=0.2.40"
pandas = ">=2.2.2"
requests-ratelimiter = ">=0.6.0"
awswrangler = ">=3.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.4"
boto3 = ">=1.34.127"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
