[tool.poetry]
name = "etf-data-scraper"
package-mode = false
description = "ETF data scraper leveraging AWS, Yahoo Finance, and Alpha Vantage APIs"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
yfinance = ">=0.2.40"
pandas = ">=2.2.2"
requests = ">=2.32.3"
requests-cache = ">=1.2.0"
pyrate-limiter = { version = ">=2.10.0", python = ">=3.11, <4.0" }
requests-ratelimiter = { version = ">=0.6.0", python = ">=3.11, <4.0" }
awswrangler = { version = ">=3.8.0", python = ">=3.11, <4.0" }

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.4"
boto3 = ">=1.34.127"
boto3-stubs = {version = ">=1.35.41", extras = ["cloudformation", "ecs"]}

[tool.poetry.group.lint-fmt.dependencies]
mypy = ">=1.12.0"
ruff = ">=0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "lambda_function"
disable_error_code = [
    "arg-type",
    "misc",
    "typeddict-item",
    "list-item"
]

[[tool.mypy.overrides]]
module = "src.deploy_stack"
disable_error_code = [
    "arg-type",
    "return-value"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["I", "F401"]
